--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/"
   }
 }
-</script> 
+</script>
 </head>
-  <body> <script type="module" src="/index.tsx"></script>
+  <body>
     <div id="root"></div>
   </body>
 </html>
