--- a/index.html
+++ b/index.html
@@ -73,20 +73,19 @@
       }
       
       html[data-theme="light"] .glass-card {
-    background: #ffffff;
-    border: 1px solid #e2e8f0;
-    /* [c] কেটে দিয়ে নিচের মতো করুন */
-    box_shadow: 
-        0 4px 6px -1px rgba(0, 0, 0, 0.05),
-        0 2px 4px -1px rgba(0, 0, 0, 0.03);
-    backdrop-filter: none;
-    -webkit-backdrop-filter: none;
-}
+        background: #ffffff;
+        border: 1px solid #e2e8f0;
+        /* Fixed box-shadow syntax */
+        box-shadow: 
+            0 4px 6px -1px rgba(0, 0, 0, 0.05),
+            0 2px 4px -1px rgba(0, 0, 0, 0.03);
+        backdrop-filter: none;
+        -webkit-backdrop-filter: none;
+      }
 
-      
       @media print {
         body { background: white; color: black; }
-        .no-print { display: none !impoimportantrtant; }
+        .no-print { display: none !important; }
         .print-only { display: block !important; }
       }
     </style>
@@ -99,16 +98,13 @@
     "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime?deps=react@18.2.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
